0.7.1.1/_sources/index.rst.txt
Welcome to Olive's documentation!
=================================

.. important::
   Olive is currently under **pre-release**. There will be constant updates and improvements to the functions and usage.
   Feel free to give feedback and suggestions to us.

This document introduces Olive and provides some examples to get you started.

.. toctree::
   :maxdepth: 1
   :caption: OVERVIEW

   overview/olive
   overview/quicktour
   overview/options

.. toctree::
   :maxdepth: 1
   :caption: GET STARTED

   getstarted/installation
   getstarted/quickstart_examples

.. toctree::
   :maxdepth: 1
   :caption: EXAMPLES

   examples

.. toctree::
   :maxdepth: 1
   :caption: OLIVE COMMANDS


   features/cli

.. toctree::
   :maxdepth: 1
   :caption: FEATURES


   features/azureml_integration
   features/huggingface_model_optimization
   features/lora
   features/packaging_output_models
   features/shared_cache
   features/run_workflow_remotely
   features/conversion
   features/quantization
   features/model_transformations_and_optimizations

.. toctree::
   :maxdepth: 1
   :caption: EXTENDING OLIVE

   extending_olive/design
   extending_olive/how_to_add_optimization_pass
   extending_olive/custom_scripts

.. toctree::
   :maxdepth: 1
   :caption: TUTORIALS

   tutorials/configure_systems
   tutorials/configure_metrics
   tutorials/configure_auto_optimizer
   tutorials/configure_pass
   tutorials/configure_data
   tutorials/configure_model_path
   tutorials/advanced_users
   tutorials/azure_arc
   tutorials/azureml_scripts

.. toctree::
   :maxdepth: 1
   :caption: API REFERENCE

   api/models.rst
   api/resource_path.rst
   api/systems.rst
   api/evaluator.rst
   api/metric.rst
   api/search-algorithms.rst
   api/engine.rst
   api/passes.rst
